--- a/LED_project/platformio.ini
+++ b/LED_project/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:uno]
 platform = atmelavr
-board = uno
-;board = megaatmega2560
+;board = uno
+board = megaatmega2560
+;board = zumbt328
 framework = arduino
 lib_deps =
      FastLED
